--- a/Figma Real Estate Landing Page/Figma Real Estate Landing Page/index.html
+++ b/Figma Real Estate Landing Page/Figma Real Estate Landing Page/index.html
@@ -23,74 +23,78 @@
     <header>
         <nav>
             <div class="row">
-                <div class="col-md-10">
-                    <ul>
-                        <li><a href=""><img src="/imgSource/Logo.png" alt="" class="logo"></a></li>
-                        <li><a href="" class="navBarText">Home</a></li>
-                        <li><a href="" class="navBarText">About Us</a></li>
-                        <li><a href="" class="navBarText">Service</a></li>
-                        <li><a href="" class="navBarText">Blog</a></li>
-                        <li><a href="" class="navBarText">Testimonial</a></li>
-                        <li><a href="" class="navBarText">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-2">
-                    <a href=""><img src="/imgSource/getStartedButton.png" alt="" class="getStarted "></a>
-                </div>
+                <a href=""><img src="/imgSource/Logo.png" alt="" class="logo"></a>
+                <a href="" class="navBarText">
+                    <p>Home</p>
+                </a>
+                <a href="" class="navBarText">
+                    <p>About Us</p>
+                </a>
+                <a href="" class="navBarText">
+                    <p>Service</p>
+                </a>
+                <a href="" class="navBarText">
+                    <p>Blog</p>
+                </a>
+                <a href="" class="navBarText">
+                    <p>Testimonial</p>
+                </a>
+                <a href="" class="navBarText">
+                    <p>Contact</p>
+                </a>
+                <a href=""><img src="/imgSource/getStartedButton.png" alt="" class="getStarted"></a>
             </div>
         </nav>
     </header>
 
     <section class="home-section-1">
-        <div class="col-md-12 nopadding">
-            <img src="/imgSource/Base Background.png" alt="" class="slider">
-        </div>
+        <img src="/imgSource/Base Background.png" alt="" class="slider">
         <div class="box-container">
             <div class="row justify-content-center">
-                <div class="col-md-10">
-                    <div class="sec1Rectangle">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <a href="" id="a1">
-                                    <p>What Will You Do ?</p>
-                                </a>
-                                <p id="p1">Rent</p>
-                            </div>
-                            <div class="col-md-2">
-                                <a href="" id="a2">
-                                    <p>
-                                        House type
-                                    </p>
-                                </a>
-                                <p id="p2">Apartment</p>
-                            </div>
-                            <div class="col-md-3">
-                                <a href="" id="a3">
-                                    <p>
-                                        Location
-                                    </p>
-                                </a>
-                                <p id="p3">Sawojajar, Malang Kota</p>
-                            </div>
-                            <div class="col-md-2">
-                                <a href="" id="a4">
-                                    <p>
-                                        Max price
-                                    </p>
-                                </a>
-                                <p id="p4">$12,000</p>
-                            </div>
-                            <div class="col-md-2">
-                                <a href="" >
-                                <img src="/imgSource/searchButton.png" alt="" id="a5">
-                                </a>
-                            </div>
+                <div class="col-md-8">
+                    <img src="/imgSource/SliderAbsolute.png" alt="" class="imgSlider">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <a href="" id="a1">
+                                <p>
+                                    What Will You Do ?
+                                </p>
+                            </a>
+                            <p id="p1">Rent</p>
+                        </div>
+                        <div class="col-md-2">
+                            <a href="" id="a2">
+                                <p>
+                                    House type
+                                </p>
+                            </a>
+                            <p id="p2">Apartment</p>
+                        </div>
+                        <div class="col-md-3">
+                            <a href="" id="a3">
+                                <p>
+                                    Location
+                                </p>
+                            </a>
+                            <p id="p3">Sawojajar, Malang Kota</p>
+                        </div>
+                        <div class="col-md-2">
+                            <a href="" id="a4">
+                                <p>
+                                    Max price
+                                </p>
+                            </a>
+                            <p id="p4">$12,000</p>
+                        </div>
+                        <div class="col-md-2">
+                            <a href="" id="a4">
+                                <img src="/imgSource/searchButton.png" alt="">
+                            </a>
+
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
     </section>
 
     <section class="home-section-2">
@@ -110,7 +114,7 @@
                     </div>
                     <div class="col-md-6">
                         <img src="/imgSource/section2IMG.png" alt="" id="section2Img">
-                        <div class="sec2-container-box"></div>
+                        <a href=""><img src="/imgSource/section2Absolute.png" alt="" id="section2Absolute"></a>
                         <a href=""><img src="/imgSource/Play button.png" alt="" id="playButton"></a>
                     </div>
                 </div>
@@ -240,15 +244,14 @@
             <div class="col-md-12">
                 <h2 id="sec5Tittle">Let's explore the property
                     of your dreams</h2>
-                <p id="sec5TittleCaption">Various models of houses, apartments, land that we offer for your dream home
-                </p>
+                <p id="sec5TittleCaption">Various models of houses, apartments, land that we offer for your dream home</p>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <img src="/imgSource/sec5Content1.png" alt="" class="content1">
                     <img src="/imgSource/sec5Content1.png" alt="" class="content1">
-                    <div class="sec5-container-box1"></div>
-                    <div class="sec5-container-box2"></div>
+                    <img src="/imgSource/sec5Absolute1.png" alt="" class="sec5Absolut1">
+                    <img src="/imgSource/sec5Absolute1.png" alt="" class="sec5Absolut2">
                     <img src="/imgSource/sec5BuildingType.png" alt="" class="sec5BuildingType1">
                     <img src="/imgSource/sec5BuildingType.png" alt="" class="sec5BuildingType2">
                     <p class="price1">$375,000</p>
@@ -268,8 +271,8 @@
                 <div class="col-md-4">
                     <img src="/imgSource/sec5Content1.png" alt="" class="content1">
                     <img src="/imgSource/sec5Content1.png" alt="" class="content1">
-                    <div class="sec5-container-box1"></div>
-                    <div class="sec5-container-box2"></div>
+                    <img src="/imgSource/sec5Absolute1.png" alt="" class="sec5Absolut1">
+                    <img src="/imgSource/sec5Absolute1.png" alt="" class="sec5Absolut2">
                     <img src="/imgSource/sec5BuildingType.png" alt="" class="sec5BuildingType1">
                     <img src="/imgSource/sec5BuildingType.png" alt="" class="sec5BuildingType2">
                     <p class="price1">$375,000</p>
@@ -278,7 +281,7 @@
                     <p class="bath1">2 Bath</p>
                     <p class="bed1">4 Bed</p>
                     <p class="size1">2980 sqft</p>
-
+                    
                     <p class="price2">$375,000</p>
                     <p class="propertyName2">Hilltruck House</p>
                     <p class="propertyLocation2">1187 Lake Forest City, TN</p>
@@ -288,7 +291,7 @@
                 </div>
                 <div class="col-md-4">
                     <img src="/imgSource/sec5Content5.png" alt="" class="content5">
-                    <div class="sec5-container-box5"></div>
+                    <img src="/imgSource/sec5Absolute5.png" alt="" class="sec5Absolut5">
                     <img src="/imgSource/sec5BuildingType5.png" alt="" class="sec5BuildingType5">
                     <p class="price5">$375,000</p>
                     <p class="propertyName5">Hilltruck House</p>
@@ -298,7 +301,13 @@
                     <p class="size5">2980 sqft</p>
                 </div>
             </div>
-            <a href=""><img src="/imgSource/sec5ViewMore.png" alt="" class="sec5ViewMore"></a>
+            <div class="col-md-12">
+                <div class="row justify-content-center">
+                    <div class="col-md-2">
+                        <a href=""><img src="/imgSource/sec5ViewMore.png" alt=""></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
